--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -185,14 +185,24 @@
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \headerbox{Problem}{name=problem,column=0,below=contribution}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-   We want to learn feature representation for data with arbitrary form when 
-   the number of unlabeled data is much more than the number of labeled data.
+    Finding a robust and compact set of features is a fundamental problem
+    in machine learning, with applications to a number of applications, including
+    classification and similarity-detection. Finding a compact basis for represnting
+    images is therefore one of the first tasks faced by both academics and industry scientists
+    working on image classification. 
+%   We want to learn feature representation for data with arbitrary form when 
+%   the number of unlabeled data is much more than the number of labeled data.
  }
  
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \headerbox{Motivation}{name=motivation,column=0,below=problem}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-   Learning features allows us to represent data in a more efficient manner.
+   Representing an $n \times n$ image using all $n^{2}$ pixels is almost
+   always highly-wasteful of computational resources. This is due to two neighboring
+   pixels being highly correlated, as they are likely to have very similar RGBA values.
+   Learning more general features allows us to represent data in a much more 
+   efficient manner, and reduces both the memory and space utilization of machine
+   learning algorithms. 
  }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -203,7 +213,7 @@
   }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  \headerbox{Preprocess}{name=preprocess,column=0,below=method}{
+  \headerbox{Preprocessing}{name=preprocess,column=0,below=method}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     1. We extract random patches (8 $\times$ 8) from unlabeled training images.\\
     2. We apply PCA on those patches to reduce feature dimensions since each pixel 
@@ -214,30 +224,30 @@
   }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  \headerbox{Clustering}{name=clustering,column=0,below=preprocess,above=bottom}{
+  \headerbox{Clustering}{name=clustering,column=1,below=preprocess,above=bottom}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    We run K-Means on the preprocessed patches. Parameter K is predetermined. 
-    We want to select K to be as large as possible without having lots of
+    We run K-Means on the preprocessed patches. The parameter $K$ is predetermined. 
+    We want to select $K$ to be as large as possible without having many
     singular clusters. Singular cluster is a cluster with no elements or very 
     few elements in it. We use euclidean distance metric. After clustering, 
     we will obtain K centroids.   \cite{coates}\\ 
   }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  \headerbox{}{name=graph,column=1,row=0}{
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  \begin{tabular}{@{}c@{ }c@{ }c@{ }c@{}@{ }@{ }c@{ }c@{ }c@{ }c@{ }}
-    \includegraphics[height=0.42\linewidth]{16_1_tgt}&
-    \includegraphics[height=0.42\linewidth]{16_1_expression}&
-    \includegraphics[height=0.42\linewidth]{16_1_neutral}\\[-0.8em]
-    \smaller a) Target & \smaller b) Fit & \smaller c) Normalized\\[0.8em]
-    \includegraphics[height=0.42\linewidth]{16_6_tgt}&
-    \includegraphics[height=0.42\linewidth]{16_6_expression}&
-    \includegraphics[height=0.42\linewidth]{16_6_neutral}\\[-0.8em]
-    \smaller a) Target & \smaller b) Fit & \smaller c) Normalized
-  \end{tabular}
-  Plots for K-Means and Sparse K-Means.
-  }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%  \headerbox{}{name=graph,column=1,row=0}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%  \begin{tabular}{@{}c@{ }c@{ }c@{ }c@{}@{ }@{ }c@{ }c@{ }c@{ }c@{ }}
+%    \includegraphics[height=0.42\linewidth]{16_1_tgt}&
+%    \includegraphics[height=0.42\linewidth]{16_1_expression}&
+%    \includegraphics[height=0.42\linewidth]{16_1_neutral}\\[-0.8em]
+%    \smaller a) Target & \smaller b) Fit & \smaller c) Normalized\\[0.8em]
+%    \includegraphics[height=0.42\linewidth]{16_6_tgt}&
+%    \includegraphics[height=0.42\linewidth]{16_6_expression}&
+%    \includegraphics[height=0.42\linewidth]{16_6_neutral}\\[-0.8em]
+%    \smaller a) Target & \smaller b) Fit & \smaller c) Normalized
+%  \end{tabular}
+%  Plots for K-Means and Sparse K-Means.
+%  }
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \headerbox{Clustering}{name=clustering2,column=1,below=graph}{
