Fixed some typo

--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -188,7 +188,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     Finding a robust and compact set of features is a fundamental problem
     in machine learning, with applications to a number of applications, including
-    classification and similarity-detection. Finding a compact basis for represnting
+    classification and similarity-detection. Finding a compact basis for representing
     images is therefore one of the first tasks faced by both academics and industry scientists
     working on image classification. 
 %   We want to learn feature representation for data with arbitrary form when 
@@ -209,7 +209,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \headerbox{Methodology}{name=method,column=0,below=motivation}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    Our approach involves a  steps to learn a feature representation. We
+    Our approach involves steps to learn a feature representation. We
     are going to explain each step in the following sections.  
   }
 
