--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -326,6 +326,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \headerbox{Open Questions}{name=questions,column=2,span=1,above=bottom,below=results}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    Just as nesting hidden-layers in convolution DBN's produce successively 
+    more general patterns, we are curious whether repeated applications of 
+    unsupervised feature learning can account for higher abstractions in features 
+    learning. Furthermore, it would be interesting to apply these techniques to 
+    non-image data, such as binary functions, or topic identification algorithms. 
     While the expression and identity space are linearly independent, there is
     some expression left in the identity model. This is because a ``neutral''
     face is interpreted differently by the subjects. We investigate the
