--- a/projectReport/ref.bib
+++ b/projectReport/ref.bib
@@ -1,14 +1,3 @@
-@article{hubel,
-  title={Receptive fields, binocular interaction and functional architecture in the cat's visual cortex},
-  author={Hubel, David H and Wiesel, Torsten N},
-  journal={The Journal of physiology},
-  volume={160},
-  number={1},
-  pages={106},
-  year={1962},
-  publisher={Blackwell Publishing}
-}
-
 @article{nigam,
   title={Text classification from labeled and unlabeled documents using EM},
   author={Nigam, Kamal and McCallum, Andrew Kachites and Thrun, Sebastian and Mitchell, Tom},
@@ -44,4 +33,20 @@
   booktitle={International Conference on Artificial Intelligence and Statistics},
   pages={215--223},
   year={2011}
+}
+
+@inproceedings{kriz,
+  title={Learning multiple layers of features from tiny images},
+  author={A. Krizhevsky},
+  booktitle={Technical report},
+  pages={},
+  year={2009}
+}
+
+@inproceedings{hoyer,
+  title={Independent component analysis applied to feature extraction from colour and stereo images},
+  author={P. O. Hoyer and A. Hyvrinen},
+  booktitle={Network (Bristol, England)},
+  pages={11(3):191–-210},
+  year={2000}
 }
